--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=false
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
