--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,11 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+description.signin: Authenticates user and returns its JWT token.
+description.signup: Creates user and returns its JWT token
+description.delete: Deletes specific user by username
+description.search: Returns specific user by username
+description.me: Returns current user's data
