--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/TCC?useTimezone=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3307/TCC?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/TCC?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-#spring.datasource.password=admin123
-spring.datasource.password=admin
+spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
